terraform/security.tf
# Default Securitiy Group: Allow SSH
resource "aws_security_group" "default" {
  name        = "${var.name}-default"
  description = "${var.name} Security Group"
  vpc_id      = "${aws_vpc.api.id}"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
